2020-05-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac, config.h.in, dvidvi.c:
	Add TL version to banner and bug report address to usage.
	* tests/playout.2, tests/playout.3: Adapt.

2018-05-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tests/playout.2, tests/playout.3: Adapt.

2018-05-15  Karl Berry  <karl@freefriends.org>

	* dvidvi.c: report actual bad option letter,
	and say to use -? instead of duplicating.

2018-05-14  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvidvi.c: Adjust 'Bad option' error message.

2018-05-09  Ken Brown  <kbrow1i@gmail.com>

	* dvidvi.c: Avoid a gcc warning with -Wformat-security.
	http://tug.org/pipermail/tlbuild/2018q2/004225.html

2017-06-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure{,ac}, aclocal.m4:
	Better configuration for Windows & kpathsea.

2017-06-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvidvi.c, configure, Makefile.{am,in}:
	Allow Unicode file names. (Windows only)

2017-06-18  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvidvi.c: Add support for pTeX tate-kumi DVI.
	* dvidvi.test: Add tests for pTeX support.
	* playout.3, playtate.dvi: Added.
	* Makefile.am: Adjusted for pTeX support.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c: Drop <kpathsea/config.h> (isascii via KPSE_COMMON).

2015-04-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c: #include <kpathsea/config.h> (for isascii).

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c: First include <config.h>.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-05-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c: Drop the problematic prototype for isatty(),